src/test/deca/context/invalid/classextends12.deca

class A {
    
}

class B extends A {
    int m(){
        return this.a;
    }
}



